# SamaraUniversity_Coursera_sports_programm

./: 10_selection_applications.cpp  11_petrol-station.cpp  1_bruteforce.cpp  2_permutations.cpp  3_brackets.cpp  4_gen_brackets.cpp  5_gen_splitting_number.cpp  6_Salesman.cpp  7_chips.cpp  8_exchange_money.cpp  9_timetable.cpp  CMakeLists.txt
