cmake_minimum_required(VERSION 3.16)
project(SamaraUniversity_Coursera_sports_programm)

set(CMAKE_CXX_STANDARD 20)

add_executable(bruteforce 1_bruteforce.cpp)
add_executable(permutations 2_permutations.cpp)
add_executable(brackets 3_brackets.cpp)
add_executable(gen_brackets 4_gen_brackets.cpp)
add_executable(gen_splitting_number 5_gen_splitting_number.cpp)
add_executable(Salesman 6_Salesman.cpp)
add_executable(chips 7_chips.cpp)